# matrix

./: .gitmodules  CMakeLists.txt  Doxyfile  Matrix.hpp  README.md
docs/: Matrix_8hpp.html  Matrix_8hpp__incl.dot  Matrix_8hpp__incl.map  Matrix_8hpp__incl.md5  Matrix_8hpp_source.html  README_8md.html  README_8md_source.html  annotated.html  classMatrix.html  classMatrix__coll__graph.dot  classMatrix__coll__graph.map  classMatrix__coll__graph.md5  classMatrix_a10cf85a4d92ee5071f863c3b1a5c7855_icgraph.dot  classMatrix_a10cf85a4d92ee5071f863c3b1a5c7855_icgraph.map  classMatrix_a10cf85a4d92ee5071f863c3b1a5c7855_icgraph.md5  classMatrix_a13c1c4acf8b0bdb386f4da571f500282_icgraph.dot  classMatrix_a13c1c4acf8b0bdb386f4da571f500282_icgraph.map  classMatrix_a13c1c4acf8b0bdb386f4da571f500282_icgraph.md5  classMatrix_a18fd808db3f9098a3732cd9d312f8da6_icgraph.dot  classMatrix_a18fd808db3f9098a3732cd9d312f8da6_icgraph.map  classMatrix_a18fd808db3f9098a3732cd9d312f8da6_icgraph.md5  classMatrix_a20ae69d2e5ae7d7a513789c0001bbd7d_cgraph.dot  classMatrix_a20ae69d2e5ae7d7a513789c0001bbd7d_cgraph.map  classMatrix_a20ae69d2e5ae7d7a513789c0001bbd7d_cgraph.md5  classMatrix_a210a51aab56f8f5a1abdafa4ae0068b8_icgraph.dot  classMatrix_a210a51aab56f8f5a1abdafa4ae0068b8_icgraph.map  classMatrix_a210a51aab56f8f5a1abdafa4ae0068b8_icgraph.md5  classMatrix_a2c13e07f1c7de419255194d344c27d99_cgraph.dot  classMatrix_a2c13e07f1c7de419255194d344c27d99_cgraph.map  classMatrix_a2c13e07f1c7de419255194d344c27d99_cgraph.md5  classMatrix_a3e44abcac1a209f656f7cd082280ddee_icgraph.dot  (+81 more)
test/: main.cpp
(+37 files in other folders)
